<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="#1975fe" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/row_event_ll"
                android:layout_width="match_parent"
                android:layout_height="210dp">

                <ImageView
                    android:id="@+id/event_image_iv"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/content_image"
                    android:scaleType="centerCrop" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_row">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/event_name_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/md_white_1000"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/event_location_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/md_grey_300"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/event_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/md_grey_300"
                            android:textSize="14sp" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/contact_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/contact_image"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:src="@drawable/contact" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/icon_contact"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/going_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/going_image"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:src="@drawable/going_unselected" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/icon_going"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/share_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/share_image"
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:src="@drawable/share" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/icon_share"
                        android:textColor="@color/md_black_1000"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:text="@string/detail_summary"
                android:textColor="@color/md_grey_900"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/event_summary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/md_grey_700"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
